# pixinsight-mcp

./: .gitattributes  .gitignore  CLAUDE.md  NGC4490_LRGB_agentic.json  README.md  TODO-v8-port.md  install-watcher.mjs  package-lock.json  package.json  start-watcher-instance.mjs
.claude/skills/pixinsight-pipeline/: SKILL.md
.claude/skills/pixinsight-pipeline/reference/: ghs-stretch.md  pjsr-gotchas.md  xterminator-tools.md
.claude/skills/process-master/: SKILL.md
.claude/skills/process-retro/: SKILL.md
.github/workflows/: ci.yml  module-build.yml  module-release.yml
agents/: classifier.mjs  processing-profiles.json
agents/llm/: deterministic-prep.mjs  engine-max.mjs  giga-run.mjs  state-machine.mjs  tools.mjs
agents/llm/prompts/: giga-orchestrator.mjs
agents/ops/: bridge.mjs  platform.mjs
docs/: PLAN.md  POST-CDP-SIGNING.md  PROCESSING_GUIDE.md  PROCESSING_JOURNAL.md  RELEASING.md  architecture.md  background-work.md  bridge-protocol.md  dev-setup.md  mcp-tools.md  osc-hoo-pelican-test-runbook.md  pjsr-reference.md  roadmap.md
docs/workflows/: README.md  mono-halrgb.md  mono-lrgb.md  mono-rgb.md  mono-sho.md  osc-hoo.md  osc-rgb.md
module/: .gitignore  CMakeLists.txt  README.md  build-pcl.bat  build-pcl.mjs  build.bat  build.mjs  config.mjs  gen-handlers.mjs  gen-handlers.sh  install.bat  install.mjs  sign.mjs
module/src/: BridgeHandlersJS.h  BridgePoller.cpp  BridgePoller.h  MCPWatcherInterface.cpp  MCPWatcherInterface.h  MCPWatcherModule.cpp  MCPWatcherModule.h  MCPWatcherProcess.cpp  MCPWatcherProcess.h  Version.h
pi-repo/: updates.xri
pjsr/: pixinsight-mcp-watcher-legacy-sm.js  pixinsight-mcp-watcher.js  pixinsight-mcp-watcher.xsgn
scripts/: build-pi-repo.mjs  build-pi-repo.ps1
src/: index.ts  types.ts
src/bridge/: client.ts
src/tools/: processing.ts  session.ts
test/: bridge-client.test.mjs  gen-handlers.test.mjs
